[User] consultas retornando lista de interesses
