# server/src/user/src/controllers/ReadUserByUsernameController.ts
@@ -1,6 +1,7 @@
 import { Request, Response } from "express";
 
 import { User } from "../model/User";
+import Api from "../../../Api";
 
 class ReadUserByUsernameController {
   async handle(request: Request, response: Response) {
@@ -13,6 +14,16 @@ class ReadUserByUsernameController {
 
       if(!data) {
         return response.status(404).send();
+      }
+
+      const api = new Api();
+
+      try {
+        const interest_list = await api.interests.get(`/read/byUserId/${data._id}`);
+        data.interest_list = interest_list.data;
+
+      } catch(err) {
+        return response.status(err.response.status).send();
       }
 
       return response.status(200).send(data);
